# siga-qt

./: .gitignore  CMakeLists.txt  README.md
cmake/: functions.cmake  gmock_init.cmake
core/: CMakeLists.txt  CMakeLists.txt~  core.h
core/coordinate_system/: CMakeLists.txt  coordinate_system.cpp  coordinate_system.h  coordinate_system_strings.h  wgs_84.cpp  wgs_84.h
core/coordinate_system/resources/translations/: translation_de_DE.ts  translation_en_US.ts  translation_pt_BR.ts
core/element/: CMakeLists.txt  element.cpp  element.h  element_constants.h  element_manager.cpp  element_manager.cpp.autosave  element_manager.h  element_properties_set.cpp  element_properties_set.h  element_strings.h  element_structs.h  link.cpp  link.h  link_properties_set.cpp  link_properties_set.h  node.cpp  node.h  node_properties_set.cpp  node_properties_set.h
core/element/node/: basin.cpp  basin.h  demand.cpp  demand.h  junction.cpp  junction.h  lake.cpp  lake.h  reservoir.cpp  reservoir.h
core/element/resources/translations/: translation_de_DE.ts  translation_en_US.ts  translation_pt_BR.ts
core/resources/translations/: translation_de_DE.ts  translation_de_DE.ts~  translation_en_US.ts  translation_en_US.ts~  translation_pt_BR.ts  translation_pt_BR.ts~
front/: CMakeLists.txt  CMakeLists.txt~
unit_testing/: CMakeLists.txt
unit_tests/: CMakeLists.txt
unit_tests/core/: CMakeLists.txt  main.cpp
unit_tests/core/core_element/: CMakeLists.txt  CMakeLists.txt~  element_manager_test.cpp  element_manager_test.h
utils/: CMakeLists.txt  CMakeLists.txt~
utils/command/: CMakeLists.txt  CMakeLists.txt~
utils/coordinate_system/: CMakeLists.txt  coordinate_system_utils.cpp  coordinate_system_utils.h  coordinate_system_utils_structs.h
view/: CMakeLists.txt~
view/cli/: CMakeLists.txt
view/gui/: CMakeLists.txt  CMakeLists.txt~  main.cpp  main_screen.cpp  main_window.cpp  main_window.h  main_window_strings.h  statusbar_widget.cpp  statusbar_widget.h  translation_utils.cpp  translation_utils.h
view/gui/canvas/: CMakeLists.txt  CMakeLists.txt~  canvas.cpp  canvas.h  main_canvas.cpp  main_canvas.h  main_canvas_tool_dialog.cpp  main_canvas_tool_dialog.h  painter.cpp  painter.h
view/gui/canvas/draw_element/: CMakeLists.txt  CMakeLists.txt~
view/gui/canvas/forms/: main_canvas_tool_dialog.ui
view/gui/canvas/shaders/: fragment_shader.h  vertex_shader.h
view/gui/draw_element/: CMakeLists.txt  CMakeLists.txt~  draw_element.cpp  draw_element.h  draw_node.cpp  draw_node.h
view/gui/draw_element/draw_primitive/: CMakeLists.txt~  draw_primitive.cpp  draw_primitive.h  draw_triangle.cpp  draw_triangle.h
view/gui/forms/: main_window.ui  statusbar_widget.ui
view/gui/graphic_element/: CMakeLists.txt  graphic_element.cpp  graphic_element.h  graphic_element_manager.cpp  graphic_element_manager.h  graphic_element_structs.h  graphic_node.cpp  graphic_node.h
view/gui/graphic_element/command/: CMakeLists.txt  command.cpp  command.h  command_add.cpp  command_add.h  command_manager.cpp  command_manager.h
view/gui/graphic_element/draw_node/: draw_basin.cpp  draw_basin.h  draw_demand.cpp  draw_demand.h  draw_junction.cpp  draw_junction.h  draw_lake.cpp  draw_lake.h  draw_node.cpp  draw_node.h  draw_reservoir.cpp  draw_reservoir.h
view/gui/graphic_element/draw_primitive/: draw_circle.cpp  draw_circle.h  draw_primitive.cpp  draw_primitive.h  draw_rectangle.cpp  draw_rectangle.h  draw_triangle.cpp  draw_triangle.h
view/gui/resources/: resources.qrc
view/gui/resources/translations/: translation_de_DE.ts  translation_de_DE.ts~  translation_en_US.ts  translation_en_US.ts~  translation_pt_BR.ts  translation_pt_BR.ts~
